# AmmoBox

./: LICENSE  README.md  pyproject.toml  setup.py
AmmoBox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ammobox/: common_helpers.py  export.py  grid_insert.py  outer_box.py  pyproject.toml  slide_lid.py  viewer.py
ammobox/examples/: example_22lr_box.py  example_45acp_box.py  example_9mm_box.py
