[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AmmoBox"
version = "0.1.0"
description = "Modular parametric 3D model generator for ammunition boxes."
authors = [
    { name="Ritesh Trikha", email="teshtrikha@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pythonocc-core>=7.5.1"
]

[project.urls]
"Homepage" = "https://github.com/trikshter/AmmoBox"
"Documentation" = "https://github.com/trikshter/AmmoBox#readme"
